--- a/test/db_agent.ipynb
+++ b/test/db_agent.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,6 +185,7 @@
     "- If the query returns a result, use check_result tool to check the query result.\n",
     "- If the query result result is empty, think about the table schema, rewrite the query, and try again.\n",
     "- DO NOT make any DML statements (INSERT, UPDATE, DELETE, DROP etc.) to the database.\n",
+    "- When constructing queries for consumption data, display consumption values as positive numbers using the absolute value\n",
     "\"\"\"\n",
     "\n",
     "query_gen_prompt = ChatPromptTemplate.from_messages([(\"system\", query_gen_system),(\"placeholder\", \"{messages}\")])\n",
@@ -193,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +252,9 @@
     }
    ],
    "source": [
-    "from langgraph.checkpoint.postgres import PostgresSaver\n",
+    "from langgraph.checkpoint.memory import MemorySaver\n",
+    "\n",
+    "\n",
     "from langgraph.graph import END, StateGraph\n",
     "from langgraph.prebuilt import ToolNode, tools_condition\n",
     "\n",
@@ -275,10 +278,9 @@
     "builder.add_edge(\"tools\", \"assistant\")\n",
     "\n",
     "# The checkpointer lets the graph persist its state\n",
-    "connection_string = \"postgresql+psycopg2://postgres:123@localhost:5432/finance-tracker\"\n",
-    "\n",
-    "with SqliteSaver.from_conn_string(\":memory:\") as memory:\n",
-    "    graph = builder.compile(checkpointer=memory)\n",
+    "# Use in-memory checkpointer\n",
+    "memory = MemorySaver()\n",
+    "graph = builder.compile(checkpointer=memory)\n",
     "    \n",
     "\n",
     "from IPython.display import Image, display\n",
@@ -291,26 +293,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
     "questions = [\"How much money I consume last year? My account ID is 0\",\n",
-    "             \"Which one was the most expensive transaction?\",\n",
+    "             \"Which one was the most expensive transaction? My account ID is 1\",\n",
     "             \"How many transactions I made last year?\",\n",
     "             \"What is the average amount of money I consume per month?\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Based on the database, the total amount of money consumed last year for account ID 0 is -9156464.00.\n"
+      "The total amount of money you consumed is 9156464.00.\n"
      ]
     }
    ],
@@ -320,19 +322,212 @@
     "import uuid \n",
     "_printed = set()\n",
     "thread_id = str(uuid.uuid4())\n",
-    "with SqliteSaver.from_conn_string(\":memory:\") as memory:\n",
-    "    graph = builder.compile(checkpointer=memory)\n",
-    "    config = {\n",
-    "        \"configurable\": {\n",
-    "            # Checkpoints are accessed by thread_id\n",
-    "            \"thread_id\": thread_id,\n",
-    "        }\n",
+    "config = {\n",
+    "    \"configurable\": {\n",
+    "        # Checkpoints are accessed by thread_id\n",
+    "        \"thread_id\": thread_id,\n",
     "    }\n",
+    "}\n",
     "\n",
     "\n",
-    "    msg = {\"messages\": [(\"user\", questions[0])]}\n",
-    "    messages = graph.invoke(msg,config)\n",
-    "    print(messages['messages'][-1].content)"
+    "msg = {\"messages\": [(\"user\", questions[0])]}\n",
+    "messages = graph.invoke(msg,config)\n",
+    "print(messages['messages'][-1].content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "================================\u001b[1m Human Message \u001b[0m=================================\n",
+      "\n",
+      "How much money I consume last year? My account ID is 0\n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "Tool Calls:\n",
+      "  sql_db_list_tables (7d5c7c56-1fd1-4697-a28e-078531690710)\n",
+      " Call ID: 7d5c7c56-1fd1-4697-a28e-078531690710\n",
+      "  Args:\n",
+      "=================================\u001b[1m Tool Message \u001b[0m=================================\n",
+      "Name: sql_db_list_tables\n",
+      "\n",
+      "app_user, category, transaction\n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "Tool Calls:\n",
+      "  sql_db_schema (d0334d11-5b94-4eb0-a9ba-b2e77d9c0012)\n",
+      " Call ID: d0334d11-5b94-4eb0-a9ba-b2e77d9c0012\n",
+      "  Args:\n",
+      "    table_names: app_user, transaction, category\n",
+      "=================================\u001b[1m Tool Message \u001b[0m=================================\n",
+      "Name: sql_db_schema\n",
+      "\n",
+      "\n",
+      "CREATE TABLE app_user (\n",
+      "\tid SERIAL NOT NULL, \n",
+      "\tusername VARCHAR(128) NOT NULL, \n",
+      "\temail VARCHAR(128) NOT NULL, \n",
+      "\tpassword VARCHAR(68) NOT NULL, \n",
+      "\tCONSTRAINT app_user_pkey PRIMARY KEY (id), \n",
+      "\tCONSTRAINT app_user_email_key UNIQUE (email), \n",
+      "\tCONSTRAINT app_user_username_key UNIQUE (username), \n",
+      "\tCONSTRAINT app_user_email_check CHECK (length(TRIM(BOTH FROM email)) > 0), \n",
+      "\tCONSTRAINT app_user_password_check CHECK (length(password::text) > 0), \n",
+      "\tCONSTRAINT app_user_username_check CHECK (length(TRIM(BOTH FROM username)) > 0)\n",
+      ")\n",
+      "\n",
+      "/*\n",
+      "3 rows from app_user table:\n",
+      "id\tusername\temail\tpassword\n",
+      "1\tdanieljames\trobertsanders@example.org\tZ6NdROxw*B\n",
+      "2\tanthonycastaneda\trichardsonjames@example.org\tFRS@G6Qg$p\n",
+      "3\ttaylorjohn\tlaurie20@example.org\tubl9JiDO!C\n",
+      "*/\n",
+      "\n",
+      "\n",
+      "CREATE TABLE category (\n",
+      "\tid SERIAL NOT NULL, \n",
+      "\tname VARCHAR(128) NOT NULL, \n",
+      "\tcolor VARCHAR(6) NOT NULL, \n",
+      "\towner_id INTEGER NOT NULL, \n",
+      "\tCONSTRAINT category_pkey PRIMARY KEY (id), \n",
+      "\tCONSTRAINT category_owner_id_fkey FOREIGN KEY(owner_id) REFERENCES app_user (id), \n",
+      "\tCONSTRAINT category_color_check CHECK (length(TRIM(BOTH FROM color)) = 6), \n",
+      "\tCONSTRAINT category_name_check CHECK (length(TRIM(BOTH FROM name)) > 0)\n",
+      ")\n",
+      "\n",
+      "/*\n",
+      "3 rows from category table:\n",
+      "id\tname\tcolor\towner_id\n",
+      "0\tOther\tba1d63\t0\n",
+      "1\tEntertainment\t09b544\t0\n",
+      "2\tCosmetic\td99b73\t0\n",
+      "*/\n",
+      "\n",
+      "\n",
+      "CREATE TABLE transaction (\n",
+      "\tid SERIAL NOT NULL, \n",
+      "\tname VARCHAR(256) NOT NULL, \n",
+      "\tvalue NUMERIC(20, 2) NOT NULL, ... (truncated)\n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "Tool Calls:\n",
+      "  sql_db_query_checker (dd6cb762-36e9-417b-b797-74fb07a06756)\n",
+      " Call ID: dd6cb762-36e9-417b-b797-74fb07a06756\n",
+      "  Args:\n",
+      "    query: SELECT SUM(value) FROM transaction JOIN category ON transaction.category_id = category.id WHERE category.owner_id = 0 AND EXTRACT(YEAR FROM timestamp) = 2024 AND value < 0;\n",
+      "=================================\u001b[1m Tool Message \u001b[0m=================================\n",
+      "Name: sql_db_query_checker\n",
+      "\n",
+      "```sql\n",
+      "SELECT SUM(value) FROM transaction JOIN category ON transaction.category_id = category.id WHERE category.owner_id = 0 AND EXTRACT(YEAR FROM timestamp) = 2024 AND value < 0;\n",
+      "```\n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "Tool Calls:\n",
+      "  sql_db_query (c1d4eefa-0ab1-4e97-a2ef-08e7333af311)\n",
+      " Call ID: c1d4eefa-0ab1-4e97-a2ef-08e7333af311\n",
+      "  Args:\n",
+      "    query: SELECT SUM(value) FROM transaction JOIN category ON transaction.category_id = category.id WHERE category.owner_id = 0 AND EXTRACT(YEAR FROM timestamp) = 2024 AND value < 0;\n",
+      "=================================\u001b[1m Tool Message \u001b[0m=================================\n",
+      "Name: sql_db_query\n",
+      "\n",
+      "[(None,)]\n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "\n",
+      "I did not find any transactions for the year 2024. I will check for the year 2023.\n",
+      "Tool Calls:\n",
+      "  sql_db_query_checker (a7aa9fbc-4f55-48c2-85e2-6170845468b5)\n",
+      " Call ID: a7aa9fbc-4f55-48c2-85e2-6170845468b5\n",
+      "  Args:\n",
+      "    query: SELECT SUM(value) FROM transaction JOIN category ON transaction.category_id = category.id WHERE category.owner_id = 0 AND EXTRACT(YEAR FROM timestamp) = 2023 AND value < 0;\n",
+      "=================================\u001b[1m Tool Message \u001b[0m=================================\n",
+      "Name: sql_db_query_checker\n",
+      "\n",
+      "```sql\n",
+      "SELECT SUM(value) FROM transaction JOIN category ON transaction.category_id = category.id WHERE category.owner_id = 0 AND EXTRACT(YEAR FROM timestamp) = 2023 AND value < 0;\n",
+      "```\n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "Tool Calls:\n",
+      "  sql_db_query (7bf0b3f2-e43f-4284-86bd-817f762e3bba)\n",
+      " Call ID: 7bf0b3f2-e43f-4284-86bd-817f762e3bba\n",
+      "  Args:\n",
+      "    query: SELECT SUM(value) FROM transaction JOIN category ON transaction.category_id = category.id WHERE category.owner_id = 0 AND EXTRACT(YEAR FROM timestamp) = 2023 AND value < 0;\n",
+      "=================================\u001b[1m Tool Message \u001b[0m=================================\n",
+      "Name: sql_db_query\n",
+      "\n",
+      "[(None,)]\n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "Tool Calls:\n",
+      "  sql_db_query_checker (d2fb7a2d-df0a-461e-add6-572c56b7bbf2)\n",
+      " Call ID: d2fb7a2d-df0a-461e-add6-572c56b7bbf2\n",
+      "  Args:\n",
+      "    query: SELECT SUM(value) FROM transaction JOIN category ON transaction.category_id = category.id WHERE category.owner_id = 0 AND EXTRACT(YEAR FROM timestamp) = 2025 AND value < 0;\n",
+      "=================================\u001b[1m Tool Message \u001b[0m=================================\n",
+      "Name: sql_db_query_checker\n",
+      "\n",
+      "```sql\n",
+      "SELECT SUM(value) FROM transaction JOIN category ON transaction.category_id = category.id WHERE category.owner_id = 0 AND EXTRACT(YEAR FROM timestamp) = 2025 AND value < 0;\n",
+      "```\n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "Tool Calls:\n",
+      "  sql_db_query (0bd06249-2eb2-44e4-9ee9-5428ad210d6c)\n",
+      " Call ID: 0bd06249-2eb2-44e4-9ee9-5428ad210d6c\n",
+      "  Args:\n",
+      "    query: SELECT SUM(value) FROM transaction JOIN category ON transaction.category_id = category.id WHERE category.owner_id = 0 AND EXTRACT(YEAR FROM timestamp) = 2025 AND value < 0;\n",
+      "=================================\u001b[1m Tool Message \u001b[0m=================================\n",
+      "Name: sql_db_query\n",
+      "\n",
+      "[(Decimal('-9156464.00'),)]\n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "Tool Calls:\n",
+      "  check_result (b10d883b-719f-48df-a86c-fae3f40c8e14)\n",
+      " Call ID: b10d883b-719f-48df-a86c-fae3f40c8e14\n",
+      "  Args:\n",
+      "    query_result: [(Decimal('-9156464.00'),)]\n",
+      "=================================\u001b[1m Tool Message \u001b[0m=================================\n",
+      "Name: check_result\n",
+      "\n",
+      "The result is not empty.\n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "\n",
+      "You consumed -9156464.00 in 2025.\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Stream\n",
+    "\n",
+    "import uuid \n",
+    "_printed = set()\n",
+    "thread_id = str(uuid.uuid4())\n",
+    "config = {\n",
+    "    \"configurable\": {\n",
+    "        # Checkpoints are accessed by thread_id\n",
+    "        \"thread_id\": thread_id\n",
+    "    }\n",
+    "}\n",
+    "events = graph.stream(\n",
+    "    {\"messages\": [(\"user\", questions[0])]}, config, stream_mode=\"values\"\n",
+    ")\n",
+    "for event in events:\n",
+    "    _print_event(event, _printed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langsmith import Client\n",
+    "\n",
+    "client = Client()\n",
+    "\n",
+    "examples = [\n",
+    "  \n",
+    "]"
    ]
   }
  ],
